# starships

./: .gitignore  LICENSE  README.rst  environment.yml  justfile  pyproject.toml
.github/workflows/: tests.yaml
examples/: do_foo.py
examples/template_output/cages/: MOC_unopt.mol  POC_unopt.mol
examples/template_output/cages/calculations/: MOC_pw.json  MOC_rdkit.mol  MOC_xtbff.mol  POC_pw.json  POC_xtbff.mol
examples/template_output/cages/calculations/MOC_xtbffopt/: gfnff_charges  input_structure_ff.xyz  optimization_ff.output  xtbopt.xyz
examples/template_output/cages/calculations/POC_xtbffopt/: gfnff_charges  input_structure_ff.xyz  optimization_ff.output  xtbopt.xyz
examples/template_output/complexes/: bidentate.mol  lcomplex.mol
examples/template_output/ligands/: ditopic_bb1_lowe.mol  ditopic_bb1_unopt.mol  ditopic_bb3_lowe.mol  ditopic_bb3_unopt.mol  tritopic_bb2_lowe.ey  tritopic_bb2_lowe.mol  tritopic_bb2_unopt.mol
src/cage_construct/: __init__.py  utilities.py
src/cage_construct/_internal/scripts/: analyse_cages.py  atomistic_model_analysis.py  build_atomistic_models.py  build_cages.py  build_complexes.py  build_ligands.py  crest_analysis.py  run_1d_scan.py  run_angle_scan.py  run_cg_model.py  run_steric_targets.py  utilities.py
src/cage_construct/_internal/utilities/: analysis_utilities.py  cage_utilities.py  complex_utilities.py  ligand_utilities.py
tests/: test_foo.py
