[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "starships"
maintainers = [
  { name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" },
]

dependencies = [
  "stk",
  "stko",
  "cgexplore",
]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"
description = "Build and analyse starship chemistries."

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
]

[project.scripts]
build_ligands = "cage_construct._internal.scripts.build_ligands:main"
build_complexes = "cage_construct._internal.scripts.build_complexes:main"
build_cages = "cage_construct._internal.scripts.build_cages:main"
analyse_cages = "cage_construct._internal.scripts.analyse_cages:main"


[project.urls]
github = "https://github.com/andrewtarzia/starships"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = [
  # list of folders that contain the packages (["."] by default)
  "src",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
  "chemiscope.*",
]
ignore_missing_imports = true
