[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "starships"
maintainers = [{ name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" }]

dependencies = ["stk", "stko", "cgexplore"]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"
description = "Build and analyse starship chemistries."

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
build_atomistic_models = "cage_construct._internal.scripts.build_atomistic_models:main"
atomistic_model_analysis = "cage_construct._internal.scripts.atomistic_model_analysis:main"
crest_analysis = "cage_construct._internal.scripts.crest_analysis:main"
run_angle_scan = "cage_construct._internal.scripts.run_angle_scan:main"
run_1d_scan = "cage_construct._internal.scripts.run_1d_scan:main"
run_cg_model = "cage_construct._internal.scripts.run_cg_model:main"
run_steric_targets = "cage_construct._internal.scripts.run_steric_targets:main"

[project.urls]
github = "https://github.com/andrewtarzia/starships"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = [
    # list of folders that contain the packages (["."] by default)
    "src",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["chemiscope.*", "cgexplore.*", "rdkit.*", "openmm.*", "networkx.*"]
ignore_missing_imports = true
